--- a/index.html
+++ b/index.html
@@ -3,31 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bienvenidos a mi mundo</title>
-<p align="center"><strong>Nicole Rodriguez</strong><br>
-aca puedes poner el area o lo que tu quieras </p>
-<style>
-body{font-family:Comic, sans-serif;}
-header{background-color:#F7DAD9;color:white;padding:10px;text-align:center;}
-section{margin:20px;}
-footer{background-color:#F7DAD9; text-align:center;padding:10px;
-position:fixed;width:100%;bottom:0;}
-</style>
+<title>Bienvenidos a mi mundo</title>  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #FFE5EC; /* Lavender Blush */
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #FFB3C6; /* Pastel Pink */
+      color: #333;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      margin: 20px auto;
+      width: 80%;
+    }
+    h2 {
+      color: #FB6F92; /* Watermelon */
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    form {
+      background-color: #FFB3C6;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 500px;
+      margin: 20px auto;
+      border: 2px solid #FB6F92;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+      color: #333;
+    }
+    input[type="text"], select {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    input[type="submit"] {
+      background-color: #FB6F92;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover {
+      background-color: #FF8FAB;
+    }
+    footer {
+      background-color: #FFB3C6;
+      text-align: center;
+      padding: 10px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
-<body bgcolor="#FFF1E6">
 <body>
-<header>
-<h1 align="center">El mundo de Nicoleta Paleta</h1>
+  <header>
+<h1 align="center">Nicole Brigitte Rodriguez Alvarez</h1>
+      <p>Ingeniería Industrial - Universidad Católica San Pablo</p>
+    <p><em>Confianza, liderazgo y tecnología para construir un futuro mejor.</em></p>
 </header>
-<h2>1.-¿Quien soy yo?</h2>
-<font size="5">
-<p>Hola, mi nombre es Samantha tengo 15 años y wiwiwiw.</p>
-<p>La verdad es que me gusta dormir pero mi hermana me gana, si dieran medallas por eso estoy segura que mi hermana ganaria todas</p>
-<p>Me saque una B en matematica asi que mas respeto por favor tipo yo pensaba que era una C pero era una B de buena y de bienaventuranzas .</p>
-<p>Naci el 11 de febrero, un dia en donde a mi hermana le brillaba el rostro aunque mi hermana dice q tiene dos amores :(. Creci ahora amo el ingles <p>
-<h2>2.-¿Porque celebramos el dia de la Alfabetización?</h2>
-<font size="5">
-<ul>
+
+  <section>
+    <h2>Sobre mí</h2>
+    <p>
+      Soy estudiante de Ingeniería Industrial y actualmente curso el tercer semestre de la carrera.
+      Conforme avanzo, me doy cuenta de que me apasiona mucho lo que estudio y estoy muy feliz con la decisión que tomé.
+      Me interesa todo lo relacionado con los procesos industriales y el diseño de plantas, porque creo que son áreas donde puedo ayudar
+      a que las empresas trabajen mejor y de forma más eficiente.
+      Me considero una persona responsable, con muchas ganas de aprender y de crecer tanto profesional como personalmente.
+      Espero poder especializarme en lo que me gusta y dejar una huella positiva en todo lo que haga.
+    </p>
+
+    <h2>Cursos universitarios relevantes</h2>
+    <ul>
 <li><b>Hoobies</b><i>Me gusta pasar tiempo con mis amigos, salir a caminar y sobre todo el ingles. I love english .</i></li>
 <li><b>aca puedes seguir poniendo otras coas que quieras explicar sobre ti :</b><i>La capacidad de leer y escribir empodera a las personas.</i></li>
 <li><b>otro subtitulo:</b><i> La alfabetización está vinculada al desarrollo económico.</i></li>
@@ -35,100 +99,81 @@ position:fixed;width:100%;bottom:0;}
 <li><b>otro pero si quieres ya lo borras</b><i> La alfabetización es clave para lograr la igualdad de género,
  ya que ofrece a mujeres y niñas las herramientas necesarias para reclamar sus derechos</i></li>
 </ul>
-<font size="5" color="729ece">
-<p align="center"><strong>"Ser ingeniera industrial es tener la mente de una estratega, el corazon de una lider y la vision de quien mejora el mundo."</strong><br>
-</font>
-<h2>Sigamos explorando mi mundo </h>
-<font size="5">
-<h2>4.-Historia Inspiradora</h2>
-<li><b>Una historia de Nicole Rodriguez</b></li>
-<p>....</p>
-<a href="foto1.jpg" target="_blank">Ver mi foto <a/>
-<h2>5.-Análisis FODA</h2>
-<style>
-table{width:60%;border-collapse:collapse;margin:20px auto;}
-table,th,td{border:3px solid black;text-align:center;padding:50px;}
-th,td{padding:20px;text-align:center;}
-th{background-color:#D6EAE3;color:white;}
-</style>
-</head>
-<body>
-<table>
-<tr>
-<th>Fortalezas</th>
-<th>Oportunidades</th>
-</tr>
-<tr>
-<td>
--Mejora las habilidades<br>
--Acesso a la informacion<br>
--Empoderamiento personal<br>
--Mejora las oportunidades laborales<br>
--Reducción de la pobreza<br>
-</td>
-<td>
--Acceso a la tecnologia<br>
--Participacion en programas de desarrollo<br>
--Acceso a mejores Oportunidades laborales<br>
--Conocimiento de derechos y servicios<br>
--Mejora el bienestar economico<br>
-</td>
-</tr>
-<tr>
-<th>Debilidades</th>
-<th>Amenazas</th>
-</tr>
-<tr>
-<td>
--Desigualdad en el acceso a recursos eduactivos<br>
--Alfabetizacion basica limitada<br>
--Falta de motivacion o interes<br>
--Abandono escolar temprano<br> 
--Resistencia cultural o social<br>
-</td>
-<td>
--Desigualdad economica<br>
--Avance tecnologico sin acompañamiento educativo<br>
--Inestabilidad Politica<br>
--Falta de políticas gubernamentales de apoyo<br>
--Impacto de pandemias<br>
-</td>
-</tr>
-</table>
-<font size="5" color="729ece">
-<p align="center"><strong>"Ingenieria Industrial: Donde aprendemos a optimizar todo... excepto nuestras horas de sueño"</strong><br>
-<head>
-<title>6.-Cuestionario sobre Nicole</title>
-<style>
-body{font-family:Arial,sans-serif;background-color:729ece;margin:20px;}
-h1{color:729ece;}
-form{background-color:#DDEBF7;padding:20px;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,0.1);}
-label{display:block;margin:10px;}
-input[type="text"],input[type="email"],select{width:100%;padding:8px;
-margin-bottom:10px;border-radius:4px;border:1px solid #ccc;}
-input[type="submit"]
-{background-color:#DDEBF7;color:white;padding:10px;border:none;
-border-radius:5px;cursor:pointer;}
-input[type="submit"]:hover
-{background-color:#DDEBF7;}
-</style>
-</head>
-<body>
-<h7>Mi cuestionario</h7>
-<form action="" method="post">
-<label for="nombre">Nombre:</label>
-<input type="text" id="nombre" name="nombre" required>
-<label for="text">¿cual crees que son mis habilidades?</label>
-<input type="text" id="correo" name="responde" required>
-<label for="nivel">¿Segun tu, cual es mi color favorito?</label>
-<select id="nivel" name="nivel"required>
-<option value="Es Alto">Anaranjado</option>
-<option value="Es Medio">Verde</option>
-<option value="Es bajo">Rosado</option>
-</select>
-<label for="opinion">Dejame un mensaje</label>
-<input type="text" id="opinion" name="opinion" required>
-<input type="submit" value="Enviar">
-</form>
+      <li><strong>Cálculo I</strong> – Prof. Meyber Yuliana Vargas Maquera de Nuñez<br>
+      <em>Estudio de funciones, límites, derivadas e integrales aplicadas a problemas de ingeniería.</em></li>
+
+      <li><strong>Física I</strong> – Prof. Yessy Bertha Guillen Baca<br>
+      <em>Introducción a la mecánica clásica: movimiento, leyes de Newton, trabajo y energía.</em></li>
+
+      <li><strong>Fundamentos de Informática</strong> – Prof. Renzo Hernán Medina Zeballos<br>
+      <em>Uso de herramientas tecnológicas básicas, programación inicial y manejo de datos.</em></li>
+
+      <li><strong>Química II</strong> – Prof. Alejandro Noé Zegarra Balboa<br>
+      <em>Estudio de soluciones, equilibrio químico y propiedades de los compuestos.</em></li>
+
+      <li><strong>Antropología Filosófica y Teológica</strong> – Prof. Miriam Berrios Garaycochea<br>
+      <em>Reflexión sobre la persona humana desde una visión filosófica y trascendente.</em></li>
+
+      <li><strong>Lógica y Gnoseología</strong> – Prof. Yahaira Byrne Rivera<br>
+      <em>Análisis del pensamiento lógico y teoría del conocimiento.</em></li>
+    </ul>
+
+    <h2>Idiomas</h2>
+    <ul>
+      <li><strong>Inglés – Intermedio</strong><br>
+      <em>Estudiado durante mi formación escolar. Lo utilizo en actividades académicas y me permite comunicarme en diferentes contextos.</em></li>
+
+      <li><strong>Francés – Básico</strong><br>
+      <em>Estudiado en la Alianza Francesa. Es un idioma que me gusta mucho y en el que deseo seguir avanzando.</em></li>
+    </ul>
+
+    <h2>Fortalezas</h2>
+    <ul>
+      <li><strong>Responsabilidad</strong> – Cumplo con mis tareas y compromisos de forma puntual y ordenada.</li>
+      <li><strong>Comunicación</strong> – Me expreso con claridad y respeto en distintos entornos.</li>
+      <li><strong>Liderazgo</strong> – Me gusta guiar y motivar a los demás para lograr objetivos en equipo.</li>
+    </ul>
+
+    <h2>Valores personales</h2>
+    <ul>
+      <li><strong>Compromiso</strong> – Me entrego con dedicación a lo que hago.</li>
+      <li><strong>Perseverancia</strong> – Sigo adelante a pesar de las dificultades.</li>
+      <li><strong>Honestidad</strong> – Actúo con sinceridad y transparencia.</li>
+      <li><strong>Respeto</strong> – Valoro a las personas y sus ideas.</li>
+    </ul>
+
+    <h2>Contacto</h2>
+    <p>
+      📧 <a href="mailto:nicolerodriguez131102@gmail.com">nicolerodriguez131102@gmail.com</a><br>
+      🔗 <a href="https://www.linkedin.com/in/nicole-rodriguez-alvarez-7438a22b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">LinkedIn: Nicole Rodriguez Alvarez</a>
+    </p>
+
+    <h2>Contacto directo</h2>
+    <p>Si deseas saber más de mí o de mis datos de contacto, completa el formulario:</p>
+
+    <form action="#" method="post">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required>
+
+      <label for="habilidades">¿Cuál crees que son mis habilidades?</label>
+      <input type="text" id="habilidades" name="habilidades" required>
+
+      <label for="color">¿Según tú, cuál es mi color favorito?</label>
+      <select id="color" name="color" required>
+        <option value="Anaranjado">Anaranjado</option>
+        <option value="Verde">Verde</option>
+        <option value="Rosado">Rosado</option>
+      </select>
+
+      <label for="mensaje">Déjame un mensaje:</label>
+      <input type="text" id="mensaje" name="mensaje" required>
+
+      <input type="submit" value="Enviar">
+    </form>
+  </section>
+
+  <footer>
+    &copy; 2025 Nicole Brigitte Rodriguez Alvarez
+  </footer>
 </body>
 </html>
