--- a/index.html
+++ b/index.html
@@ -92,13 +92,6 @@
 
     <h2>Cursos universitarios relevantes</h2>
     <ul>
-<li><b>Hoobies</b><i>Me gusta pasar tiempo con mis amigos, salir a caminar y sobre todo el ingles. I love english .</i></li>
-<li><b>aca puedes seguir poniendo otras coas que quieras explicar sobre ti :</b><i>La capacidad de leer y escribir empodera a las personas.</i></li>
-<li><b>otro subtitulo:</b><i> La alfabetización está vinculada al desarrollo económico.</i></li>
-<li><b>otro </b><i> Al mejorar las habilidades de lectura y escritura, se reduce la pobreza.</i></li>
-<li><b>otro pero si quieres ya lo borras</b><i> La alfabetización es clave para lograr la igualdad de género,
- ya que ofrece a mujeres y niñas las herramientas necesarias para reclamar sus derechos</i></li>
-</ul>
       <li><strong>Cálculo I</strong> – Prof. Meyber Yuliana Vargas Maquera de Nuñez<br>
       <em>Estudio de funciones, límites, derivadas e integrales aplicadas a problemas de ingeniería.</em></li>
 
@@ -155,15 +148,8 @@
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" required>
 
-      <label for="habilidades">¿Cuál crees que son mis habilidades?</label>
-      <input type="text" id="habilidades" name="habilidades" required>
-
-      <label for="color">¿Según tú, cuál es mi color favorito?</label>
-      <select id="color" name="color" required>
-        <option value="Anaranjado">Anaranjado</option>
-        <option value="Verde">Verde</option>
-        <option value="Rosado">Rosado</option>
-      </select>
+      <label for="correo personal">¿Cuál es tu correo de contacto?</label>
+      <input type="text" id="correo personal" name="correo personal" required>
 
       <label for="mensaje">Déjame un mensaje:</label>
       <input type="text" id="mensaje" name="mensaje" required>
