--- a/index.html
+++ b/index.html
@@ -144,18 +144,19 @@
     <h2>Contacto directo</h2>
     <p>Si deseas saber más de mí o de mis datos de contacto, completa el formulario:</p>
 
-    <form action="#" method="post">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required>
+<form action="https://formspree.io/f/xjkrreeo" method="POST">
+<form action="https://formspree.io/f/xjkrreeo" method="POST">
+  <label for="nombre">Nombre:</label>
+  <input type="text" id="nombre" name="name" required>
 
-      <label for="correo personal">¿Cuál es tu correo de contacto?</label>
-      <input type="text" id="correo personal" name="correo personal" required>
+  <label for="correo">¿Cuál es tu correo de contacto?</label>
+  <input type="email" id="correo" name="email" required>
 
-      <label for="mensaje">Déjame un mensaje:</label>
-      <input type="text" id="mensaje" name="mensaje" required>
+  <label for="mensaje">Déjame un mensaje:</label>
+  <textarea id="mensaje" name="message" required></textarea>
 
-      <input type="submit" value="Enviar">
-    </form>
+  <input type="submit" value="Enviar">
+</form>
   </section>
 
   <footer>
