--- a/index.html
+++ b/index.html
@@ -135,6 +135,39 @@
       <li><strong>Respeto</strong> – Valoro a las personas y sus ideas.</li>
     </ul>
 
+      <section style="background-color: #FFC2D1; padding: 20px; border-radius: 10px; max-width: 600px; margin: 20px auto;">
+  <h2 style="color: #FB6F92;">Mis compañeros de universidad</h2>
+
+  <div style="background-color: #FFE5EC; padding: 10px; border-radius: 5px; margin-bottom: 10px;">
+    <strong>Brenda Berenice Rojas Rodríguez</strong><br>
+    🌐 <a href="https://brenda-berenice-rojas-rodriguez.github.io/brendaberenicerojasrodriguez/" target="_blank">Visitar página</a><br>
+    🔗 <a href="https://pe.linkedin.com/in/brenda-berenice-rojas-rodr%C3%ADguez-797b07276" target="_blank">LinkedIn</a>
+  </div>
+
+  <div style="background-color: #FFE5EC; padding: 10px; border-radius: 5px; margin-bottom: 10px;">
+    <strong>Piero Polar Salazar</strong><br>
+    🌐 <a href="https://crimsonkiller18.github.io/Piero-Polar-Salazar/" target="_blank">Visitar página</a><br>
+    🔗 <a href="https://pe.linkedin.com/in/piero-polar-salazar-7807b0357" target="_blank">LinkedIn</a>
+  </div>
+
+  <div style="background-color: #FFE5EC; padding: 10px; border-radius: 5px; margin-bottom: 10px;">
+    <strong>Arianna Aylin Arenas Zevallos</strong><br>
+    🌐 <a href="https://ariannaarenas.github.io/ariannaaylinarenaszevallos/" target="_blank">Visitar página</a><br>
+    🔗 <a href="https://linkedin.com/in/arianna-aylin-arenas-zevallos-15a203357" target="_blank">LinkedIn</a>
+  </div>
+
+  <div style="background-color: #FFE5EC; padding: 10px; border-radius: 5px; margin-bottom: 10px;">
+    <strong>Pedro Fabian Zahir Flores Gutierrez</strong><br>
+    🌐 <a href="https://pedro191102.github.io/Pedro-Fabian-Zahir-Flores-Gutierrez/" target="_blank">Visitar página</a><br>
+    🔗 <a href="https://www.linkedin.com/in/pedro-f-z-flores-guti%C3%A9rrez-415753365/?originalSubdomain=pe" target="_blank">LinkedIn</a>
+  </div>
+
+  <div style="background-color: #FFE5EC; padding: 10px; border-radius: 5px; margin-bottom: 10px;">
+    <strong>Jesús Franklin Hilarión Gallegos</strong><br>
+    🌐 <a href="https://franklinhilarion.github.io/franklinhilarion/" target="_blank">Visitar página</a><br>
+    🔗 <a href="https://www.linkedin.com/in/franklin-hilari%C3%B3n/" target="_blank">LinkedIn</a>
+  </div>
+</section>
     <h2>Contacto</h2>
     <p>
       📧 <a href="mailto:nicolerodriguez131102@gmail.com">nicolerodriguez131102@gmail.com</a><br>
