--- a/index.html
+++ b/index.html
@@ -204,6 +204,22 @@
         🌐 <a href="https://franklinhilarion.github.io/franklinhilarion/" target="_blank">Visitar página</a><br>
         🔗 <a href="https://www.linkedin.com/in/franklin-hilari%C3%B3n/" target="_blank">LinkedIn</a>
       </div>
+      <div class="amigo-card">
+        <strong>Angie Yominey Zapacayo Ticona</strong><br>
+        🌐 <a href="https://angiezapacayo.github.io/angie-yominey-zapacayo-ticona/" target="_blank">Visitar página</a>
+      </div>
+      <div class="amigo-card">
+        <strong>Diego Velasquez Godenzi</strong><br>
+        🌐 <a href="https://diegovelasquez123.github.io/diegovelasquez.github.io/" target="_blank">Visitar página</a>
+      </div>
+      <div class="amigo-card">
+        <strong>Gian Franco Auccatinco Ponce</strong><br>
+        🌐 <a href="https://gian-ap.github.io/mi-pagina-gian/" target="_blank">Visitar página</a>
+      </div>
+      <div class="amigo-card">
+        <strong>Kiara Fernanda Pullchz Velazco</strong><br>
+        🌐 <a href="https://kiarapullchzvelazco12.github.io/kiarapullchz.github.io/" target="_blank">Visitar página</a>
+      </div>
     </div>
   </section>
 
