--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
 
     <div class="box">
       <h2>Cursos universitarios relevantes</h2>
-      <ul>
+     <ul>
         <li><strong>Cálculo I</strong> – Prof. Meyber Yuliana Vargas Maquera de Nuñez<br>
         <em>Estudio de funciones, límites, derivadas e integrales aplicadas a problemas de ingeniería.</em></li>
         <li><strong>Física I</strong> – Prof. Yessy Bertha Guillen Baca<br>
         <em>Introducción a la mecánica clásica: movimiento, leyes de Newton, trabajo y energía.</em></li>
-        <li><strong>Fundamentos de Informática</strong> – Prof. Renzo Hernán Medina Zeballos<br>
+        <li><strong>Fundamentos de Informática</strong> – <a href="https://www.linkedin.com/in/ecuadrosv?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">Prof. Renzo Hernán Medina Zeballos</a><br>
         <em>Uso de herramientas tecnológicas básicas, programación inicial y manejo de datos.</em></li>
-        <li><strong>Química II</strong> – Prof. Alejandro Noé Zegarra Balboa<br>
+        <li><strong>Química II</strong> – <a href="https://pe.linkedin.com/in/alejandro-zegarra-balboa-60879a102" target="_blank">Prof. Alejandro Noé Zegarra Balboa</a><br>
         <em>Estudio de soluciones, equilibrio químico y propiedades de los compuestos.</em></li>
-        <li><strong>Antropología Filosófica y Teológica</strong> – Prof. Miriam Berrios Garaycochea<br>
+        <li><strong>Antropología Filosófica y Teológica</strong> – <a href="https://pe.linkedin.com/in/miriam-berr%C3%ADos-garaycochea-b1748528" target="_blank">Prof. Miriam Berrios Garaycochea</a><br>
         <em>Reflexión sobre la persona humana desde una visión filosófica y trascendente.</em></li>
-        <li><strong>Lógica y Gnoseología</strong> – Prof. Yahaira Byrne Rivera<br>
+        <li><strong>Lógica y Gnoseología</strong> – <a href="https://pe.linkedin.com/in/yahaira-byrne-rivera-274201221" target="_blank">Prof. Yahaira Byrne Rivera</a><br>
         <em>Análisis del pensamiento lógico y teoría del conocimiento.</em></li>
       </ul>
     </div>
