--- a/index.html
+++ b/index.html
@@ -19,11 +19,33 @@
     text-align: center;
     font-family: 'Poppins', sans-serif;
   }
+    nav {
+    background-color: #FFB3C6;
+    margin-top: 10px;
+  }
+  nav ul.menu {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+  nav ul.menu li {
+    margin: 0 10px;
+  }
+  nav ul.menu li a {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+  }
+  nav ul.menu li a:hover {
+    color: #FB6F92;
+  }
   section {
     width: 90%;
     max-width: 800px;
     margin: 20px auto;
-  }
   .box {
     background-color: #FFC2D1;
     border: 2px solid #FB6F92;
@@ -101,7 +123,7 @@
   </header>
 
   <section>
-    <div class="box">
+    <div class="box" id="sobremi">
       <h2>Sobre mí</h2>
       <p>
         Soy estudiante de Ingeniería Industrial y actualmente curso el tercer semestre de la carrera.
@@ -113,7 +135,7 @@
       </p>
     </div>
 
-    <div class="box">
+    <div class="box" id="cursos">
       <h2>Cursos universitarios relevantes</h2>
      <ul>
         <li><strong>Cálculo I</strong> – Prof. Meyber Yuliana Vargas Maquera de Nuñez<br>
@@ -131,7 +153,7 @@
       </ul>
     </div>
 
-    <div class="box">
+    <div class="box" id="idiomas">
       <h2>Idiomas</h2>
       <ul>
         <li><strong>Inglés – Intermedio</strong><br>
@@ -141,7 +163,7 @@
       </ul>
     </div>
 
-    <div class="box">
+    <div class="box" id="fortalezas">
       <h2>Fortalezas</h2>
       <ul>
         <li><strong>Responsabilidad</strong> – Cumplo con mis tareas y compromisos de forma puntual y ordenada.</li>
@@ -150,7 +172,7 @@
       </ul>
     </div>
 
-    <div class="box">
+    <div class="box" id="valores">
       <h2>Valores personales</h2>
       <ul>
         <li><strong>Compromiso</strong> – Me entrego con dedicación a lo que hago.</li>
@@ -160,7 +182,7 @@
       </ul>
     </div>
 
-    <div class="box">
+    <div class="box" id="contacto">
       <h2>Contacto directo</h2>
       <p>Si deseas saber más de mí o de mis datos de contacto, completa el formulario:</p>
       <form action="https://formspree.io/f/xjkrreeo" method="POST">
@@ -177,7 +199,7 @@
       </form>
     </div>
 
-    <div class="box">
+    <div class="box" id="compañeros">
       <h2>Mis compañeros de universidad</h2>
       <div class="amigo-card">
         <strong>Brenda Berenice Rojas Rodríguez</strong><br>
